--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               </tr>
               <tr>
                 <th scope="row">2</th>
-                <td>Scam Site 2</td>
+                <td>CAEFZ</td>
                 <td><a href="https://caefz.com" target="_blank">caefz.com</a></td>
                 <td>This site is known for committing bitcoin fraud.</td>
 		<td>
@@ -167,4 +167,3 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
-
