--- a/index.html
+++ b/index.html
@@ -7,15 +7,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
  
   <style>
-    body {
-      scroll-behavior: smooth;
-      padding-top: 56px;
-      background-color: #f8f9fa;
-    }
     .scam-header {
       background: linear-gradient(45deg, #dc3545, #ff6f61);
       color: white;
       padding: 20px 0;
+
     }
     .scam-header h1 {
       font-size: 2.5rem;
@@ -41,32 +37,38 @@
   </style>
 </head>
 <body>
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">ScamList</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="#home">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#about">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#scam-list">Scam List</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#contact">Contact</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#contact">Report Scam</a>
-        </li>
-      </ul>
+  
+  
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+        <a class="navbar-brand" href="#">ScamList</a>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+         <li class="nav-item">
+           <a class="nav-link" href="#home">Home</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="#about">About</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="#scam-list">Scam List</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="#contact">Contact</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="#contact">Report Scam</a>
+         </li>
+        </ul>
+      </div>
     </div>
   </nav>
+  
+  
+  
 
   <!-- Header -->
   <header id="home" class="scam-header text-center">
