--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
       <h2 class="text-center">Scam Websites</h2>
       <div class="row">
         <div class="col-lg-12">
+		<div class="table-responsive">
+
           <table class="table table-striped table-hover">
             <thead class="thead-dark">
               <tr>
@@ -129,6 +131,7 @@
               <!-- Add more rows as needed -->
             </tbody>
           </table>
+		</div>
         </div>
       </div>
     </div>
