--- a/index.html
+++ b/index.html
@@ -106,6 +106,20 @@
             </thead>
             <tbody>
               <!-- Sample data, replace with your own data -->
+
+
+		    	<tr>
+                <th scope="row">1</th>
+                <td>adverge-apps</td>
+                <td><a href="https://www.adverge-apps.com" target="_blank">adverge-apps.com</a></td>
+                <td>This site is known for committing bitcoin fraud.</td>
+		<td>
+		<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+		  Detail
+		</button>
+		</td>
+              </tr>
+		    
 		<tr>
                 <th scope="row">1</th>
                 <td>UXDOM</td>
@@ -168,6 +182,21 @@
           </div>
           <div class="modal-body">
             Recently, a new scam originating from China has been targeting individuals through messaging apps. The scammer initiates contact on Telegram, later moving to WhatsApp (+852 5422 3531) to build trust. They claim to be planning a trip to Turkey, and say their uncle is a deputy manager in China's asset management, while they are an investment expert. They lure victims with promises of high returns through pre-sale cryptocurrency investments, initially suggesting small investments which show significant returns. After transferring these initial profits, the scammer encourages larger investments, claiming even higher returns. As the investment seemingly grows exponentially, the scammer demands a hefty upfront fee (e.g., 10%) to withdraw the funds, and doesn't allow partial withdrawals. Despite offers to lend money for the fee, the scammer's refusal of alternative solutions exposes the scam. Always be wary of unsolicited investment advice, especially those promising quick, high returns, and verify independently before transferring any funds.
+          </div>
+        </div>
+      </div>
+    </div>
+
+	      <!-- Modal2 -->
+    <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">bcpov, caefz</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+		  They contact you via WhatsApp and claim that if you want to earn money, they can connect you with an "HR Manager." This person then shares a link to a website and asks you to create an account. After logging in, you're told that you can earn money by completing 40 tasks. However, with each task request, they claim your balance is insufficient and repeatedly ask you to deposit more money. Despite your deposits, it becomes impossible to withdraw your earnings from the system.
           </div>
         </div>
       </div>
