--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <th scope="row">1</th>
                 <td>adverge-apps</td>
                 <td><a href="https://www.adverge-apps.com" target="_blank">adverge-apps.com</a></td>
-                <td>This site is known for committing bitcoin fraud.</td>
+                <td>This site is known for its earnings scams.</td>
 		<td>
 		<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal2">
 		  Detail
