--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 		    <tr>
                 <th scope="row">1</th>
                 <td>MENGINC</td>
-                <td><a href="https://www.uxdom.com" target="_blank">menginc.com</a></td>
+                <td><a href="https://www.menginc.com" target="_blank">menginc.com</a></td>
                 <td>This site is known for committing bitcoin fraud.</td>
 		<td>
 		<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
