--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
   <section id="contact" class="section text-center">
     <div class="container">
       <h2>Contact Us</h2>
-      <p>If you have any questions or would like to report a scam website, please feel free to reach out to us at <a href="mailto:mail.imge@gmail.com">mail.imge@gmail.com</a>. We value your feedback and aim to respond to all inquiries promptly.</p>
+      <p>If you have any questions or would like to report a scam website, please feel free to reach out to us at <a href="mailto:scamlist.net@gmail.com">scamlist.net@gmail.com</a>. We value your feedback and aim to respond to all inquiries promptly.</p>
     </div>
   </section>
 
